# git-shim

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  nightly.yml  release.yml
scripts/: e2e.ps1  install-github-desktop.ps1
src/: error.rs  lib.rs  main.rs  resolver.rs
src/os/: exec.rs  localappdata.rs  mod.rs
tests/: canonical_invocation.rs
