[package]
name = "git-shim"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "Stable, shell-independent shim that routes `git` to the Git for Windows binary bundled with GitHub Desktop."
license = "MIT"
repository = "https://github.com/git-shim/git-shim"
readme = "README.md"
keywords = ["git", "github-desktop", "shim", "windows"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-shim"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
